--- a/css/index.css
+++ b/css/index.css
@@ -8,38 +8,52 @@
     src: url('../fonts/Montserrat-Thin.ttf');
 }
 
+
 html, body {
     width: 100%;
-    height: 100%;
+    height: auto;
     margin: 0px;
     padding: 0px;
     color: white;
 }
 
+body {
+    background-image: radial-gradient(circle, #1c2541, #18203b, #131c36, #0f1830, #0b132b);
+}
+
+#download {
+    
+}
+
+#main {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 10%;
+}
+
 #Text-content {
-    width: 25%;
+    width: 35%;
     text-align: justify;
 }
 
-
 #title{
-    font-family: "Montserrat-Bold.ttf";
+    font-family: "Montserrat-Bold";
+    font-size: 4em;
 }
 
 .Thin {
     font-family: "Montserrat-Thin";
 }
-    
-body {
-    background-image: radial-gradient(circle, #1c2541, #18203b, #131c36, #0f1830, #0b132b);
-}
 
 .vertical-line {
     border-left: 2px solid white;
-    height: 500px;
+    height: 50vh;
     opacity: 25%;
-    position: absolute;
-    left: 50%;
-    margin-left: -3px;
-    top: 25%;
+}
+
+span {
+    display: block;
 }
