--- a/css/index.css
+++ b/css/index.css
@@ -21,9 +21,26 @@ body {
     background-image: radial-gradient(circle, #1c2541, #18203b, #131c36, #0f1830, #0b132b);
 }
 
+#header {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
 #download {
+    background-color: #1C2541;
+    color: white;
+    font-family: "Montserrat-Thin";
+    font-size: 1.5em;
+    margin-top: 3vh;
+    margin-right: 8vh;
+    border: none;
+    border-radius: 25px;
+    width: 200px;
+    height: 50px;
     
 }
+
 
 #main {
     display: flex;
@@ -31,17 +48,22 @@ body {
     width: 100%;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 10%;
+    margin-top: 6%;
 }
 
 #Text-content {
-    width: 35%;
+    width: 25%;
     text-align: justify;
+    margin-bottom: 2%;
 }
 
 #title{
     font-family: "Montserrat-Bold";
     font-size: 4em;
+}
+
+#title span{
+    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.644);
 }
 
 .Thin {
@@ -50,7 +72,7 @@ body {
 
 .vertical-line {
     border-left: 2px solid white;
-    height: 50vh;
+    height: 55vh;
     opacity: 25%;
 }
 
