--- a/css/index.css
+++ b/css/index.css
@@ -38,7 +38,7 @@ body {
     border-radius: 25px;
     width: 200px;
     height: 50px;
-    
+    cursor: pointer;    
 }
 
 
@@ -63,7 +63,7 @@ body {
 }
 
 #title span{
-    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.644);
+    text-shadow: 0px 10px 35px rgba(0, 0, 0, 0.5);
 }
 
 .Thin {
