--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,8 @@ body {
     justify-content: flex-end;
 }
 
-#download {
+
+.download {
     background-color: #1C2541;
     color: white;
     font-family: "Montserrat-Thin";
@@ -38,9 +39,19 @@ body {
     border-radius: 25px;
     width: 200px;
     height: 50px;
-    cursor: pointer;    
+    cursor: pointer;
+    display: block;
+    -webkit-transition: all .2s ease-in-out;
+            transition: all .2s ease-in-out;
 }
 
+.download:hover {
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+        transform: scale(1.2);
+    box-shadow: 0px 6px 4px -2px rgba(28, 37, 65, 0.5)
+
+}
 
 #main {
     display: flex;
