--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,7 @@ body {
     display: block;
     -webkit-transition: all .2s ease-in-out;
             transition: all .2s ease-in-out;
+    outline: none;
 }
 
 .download:hover {
