--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
     src: url('../fonts/Montserrat-Thin.ttf');
 }
 
-
-html, body {
+html,
+body {
     width: 100%;
     height: auto;
     margin: 0px;
@@ -40,23 +40,23 @@ body {
     margin-top: 3vh;
     margin-right: 8vh;
     border: none;
-    border-radius: 25px; 
+    border-radius: 25px;
     width: 200px;
     height: 50px;
     cursor: pointer;
     display: block;
     -webkit-transition: all .2s ease-in-out;
-            transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
     outline: none;
 }
 
 .download:hover {
     -webkit-transform: scale(1.2);
     -ms-transform: scale(1.05);
-        transform: scale(1.05);
+    transform: scale(1.05);
     box-shadow: 0px 6px 4px -2px rgba(28, 37, 65, 0.5)
-
 }
+
 #main {
     display: flex;
     flex-direction: row;
@@ -67,18 +67,18 @@ body {
 }
 
 #Text-content {
-    width: 25%;
+    width: 35%;
     text-align: justify;
     margin-bottom: 2%;
 }
 
-#title{
+#title {
     font-family: "Montserrat-Bold";
     font-size: 4em;
 }
 
-#title span{
-    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.644);
+#title span {
+    text-shadow: 0px 10px 35px rgba(0, 0, 0, 0.644);
 }
 
 .Thin {
@@ -93,4 +93,13 @@ body {
 
 span {
     display: block;
+}
+
+.soft-picture {
+    width: 35%;
+}
+
+.soft-picture img {
+    width: 100%;
+    ;
 }
