--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,9 @@ body {
     justify-content: flex-end;
 }
 
-#download {
+.download {
     width: 200px;
     height: 50px;
-}
-
-.download {
     background-color: #1C2541;
     color: white;
     font-family: "Montserrat-Thin";
@@ -41,19 +38,14 @@ body {
     margin-right: 8vh;
     border: none;
     border-radius: 25px;
-    width: 200px;
-    height: 50px;
     cursor: pointer;
     display: block;
-    -webkit-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
     outline: none;
 }
 
 .download:hover {
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.05);
-    transform: scale(1.05);
+    transform: scale(1.1);
+    transition: all ease-in-out 0.2s;
     box-shadow: 0px 6px 4px -2px rgba(28, 37, 65, 0.5)
 }
 
@@ -101,5 +93,4 @@ span {
 
 .soft-picture img {
     width: 100%;
-    ;
 }
