--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,11 @@ body {
     box-shadow: 0px 6px 4px -2px rgba(28, 37, 65, 0.5)
 }
 
+.download-link {
+    color: white;
+    text-decoration: none;
+}
+
 #main {
     display: flex;
     flex-direction: row;
